--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
