--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "mongoose": "^8.15.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
