--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
