--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.28.1",
-    "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
+    "yaml": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
